# Merkel-DAG-Blockchain

./: app.py  pyproject.toml  replit.nix
blockchain/: __init__.py  block.py  dag.py  merkle_tree.py  transaction.py  utils.py  wallet.py
static/css/: style.css
static/js/: main.js
templates/: blockchain.html  dag.html  index.html  transactions.html  wallets.html
visualization/: __init__.py  blockchain_visualizer.py  dag_visualizer.py
