[project]
name = "blockchain-ledger"
version = "0.1.0"
description = "DAG-based Merkle Tree Transaction System"
requires-python = ">=3.11"
dependencies = [
    "ecdsa>=0.19.1",
    "email-validator>=2.2.0",
    "flask>=3.1.0",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=23.0.0",
    "matplotlib>=3.10.1",
    "networkx>=3.4.2",
    "psycopg2-binary>=2.9.10",
    "scipy>=1.15.2",
]
